BUG - some folders of gmail accounts are not visible

--- a/styles/themes/Default/styles.less
+++ b/styles/themes/Default/styles.less
@@ -119,7 +119,10 @@
 
 .theme-clear-left-panel() {
 	background: fade(#1e1c1f, 20%);
-	
+
+	.items_list .item > .title {
+		color: #d0d0d0;
+	}
 	.items_list .item.canSelect > .title {
 		color: #fff;
 		text-shadow: none;
